# webgpu_test

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build-mesh.bat  build.bat  build_rg.bat  build_web.bat  build_web_rg.bat  build_win.bat  msvcsetup.bat  serve_web.py
.github/workflows/: deploy.yml
assets/: Roman_Stone_Capital_tfpvdgeda_High.gltf  n.mesh  rsc.mesh  rsc.nanite
docs/: rendergraph-attachments.md  rendergraph-ssa-review.md  rendergraph-ssa-versioning.md
src/: AlpUtils.h  ClusteredMesh.cpp  ClusteredMesh.h  Framework.cpp  Framework.h  RenderGraph.cpp  RenderGraph.h  RenderGraph_bake.cpp  RenderGraph_deferred.cpp  RenderGraph_demo.h  RenderGraph_main.cpp  RenderGraph_msaa.cpp  RenderGraph_particles.cpp  RenderGraph_pathtracer.cpp  RenderGraphsTODO.md  Renderer.cpp  Renderer.h  imgui_layer.h  main.cpp  mainNaniteBuilder.cpp  main_SDL.cpp  main_web.cpp  shell.html  shell_rg.html
